--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -13,10 +13,10 @@ $radius: 3px;
 
 $form-base-width: 16px;
 
-$btn_start: #fff;
-$btn_stop: #f5f5f5;
-$btn_hover_start: #f5f5f5;
-$btn_hover_stop: #f5f5f5;
+$btn_start: #f5f5f5;
+$btn_stop: #f9f9f9;
+$btn_hover_start: #f9f9f9;
+$btn_hover_stop: #e6e6e6;
 
 //Primary Button Normal
 $btn_primary_color: darken($white, 10%); //text color
