--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,5 +1,5 @@
 /*@group basic */
-.btn {
+.button {
   display: inline-block;
   padding: 8px 16px;
   border: 1px solid #ccc;
@@ -10,37 +10,37 @@
   line-height: 18px;
   text-decoration: none;
   cursor: pointer;
-  background: #f5f5f5;
-  background: -moz-linear-gradient(top, white 0%, #f5f5f5 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #f5f5f5));
-  background: -webkit-linear-gradient(top, white 0%, #f5f5f5 100%);
-  background: -o-linear-gradient(top, white 0%, #f5f5f5 100%);
-  background: -ms-linear-gradient(top, white 0%, #f5f5f5 100%);
-  background: linear-gradient(to bottom, white 0%, #f5f5f5 100%);
+  background: #f9f9f9;
+  background: -moz-linear-gradient(top, #f5f5f5 0%, #f9f9f9 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #f9f9f9));
+  background: -webkit-linear-gradient(top, #f5f5f5 0%, #f9f9f9 100%);
+  background: -o-linear-gradient(top, #f5f5f5 0%, #f9f9f9 100%);
+  background: -ms-linear-gradient(top, #f5f5f5 0%, #f9f9f9 100%);
+  background: linear-gradient(to bottom, #f5f5f5 0%, #f9f9f9 100%);
 }
-.btn:hover {
-  background: #f5f5f5;
-  background: -moz-linear-gradient(top, #f5f5f5 0%, #f5f5f5 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #f5f5f5));
-  background: -webkit-linear-gradient(top, #f5f5f5 0%, #f5f5f5 100%);
-  background: -o-linear-gradient(top, #f5f5f5 0%, #f5f5f5 100%);
-  background: -ms-linear-gradient(top, #f5f5f5 0%, #f5f5f5 100%);
-  background: linear-gradient(to bottom, #f5f5f5 0%, #f5f5f5 100%);
+.button:hover {
+  background: #e6e6e6;
+  background: -moz-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f9f9f9), color-stop(100%, #e6e6e6));
+  background: -webkit-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
+  background: -o-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
+  background: -ms-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
+  background: linear-gradient(to bottom, #f9f9f9 0%, #e6e6e6 100%);
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-.btn:active {
+.button:active {
   box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.1);
 }
 
 /*@end basic */
-/*@group sizes */
-.btn.small {
+/*@group dimensions */
+.button.small {
   padding: 6px 12px;
   font-size: 11px;
 }
 
-.btn.large {
+.button.large {
   padding: 7px 26px;
   font-size: 18px;
   line-height: 36px;
@@ -48,7 +48,7 @@
 
 /*@end sizes */
 /*@group primary*/
-.btn.primary {
+.button.primary {
   background: #01688d;
   background: -moz-linear-gradient(top, #02a0d9 0%, #01688d 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #02a0d9), color-stop(100%, #01688d));
@@ -59,7 +59,7 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   color: #e6e6e6;
 }
-.btn.primary:hover {
+.button.primary:hover {
   background: #01688d;
   background: -moz-linear-gradient(top, #01688d 0%, #01688d 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #01688d), color-stop(100%, #01688d));
@@ -70,20 +70,20 @@
   color: white;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 }
-.btn.primary:active {
+.button.primary:active {
   box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.3);
 }
 
 /*@end primary*/
 /*@group primary + 3D*/
-.btn.primary.threeD {
+.button.primary.threeD {
   background: #02a0d9;
   box-shadow: 0 4px 1px black, 0px 8px 8px rgba(0, 0, 0, 0.4);
 }
-.btn.primary.threeD:hover {
+.button.primary.threeD:hover {
   box-shadow: 0 4px 1px black, 0px 7px 7px rgba(0, 0, 0, 0.4);
 }
-.btn.primary.threeD:active {
+.button.primary.threeD:active {
   box-shadow: 0 1px 1px black, 0px 3px 2px rgba(0, 0, 0, 0.4);
   -webkit-transform: translate(0, 1px);
   -moz-transform: translate(0, 1px);
