--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -2,56 +2,25 @@
 @import "variables";
 
 /*@group basic */
-.btn {
-	display: inline-block;
-	padding: 8px 16px;
-	border: 1px solid #ccc;
-	border: 1px solid rgba(0,0,0,0.15);
-	border-radius: 4px;
-	color: $darker-grey;
-	text-align: center;
-	line-height: 18px;
-	text-decoration: none;
-	cursor: pointer;
-	@include gradient($btn_start, $btn_stop);
-	&:hover {
-		@include gradient($btn_hover_start, $btn_hover_stop);
-		border: 1px solid rgba(#000,0.2);
-		box-shadow: inset 0 1px 3px rgba(#000,0.1);
-	}
-	&:active {
-		box-shadow: inset 0 4px 5px rgba(#000,0.1);
-	}
-}
+@import "buttons/basic.scss";
 /*@end basic */
-/*@group sizes */
-.btn.small {
+
+/*@group dimensions */
+.button.small {
 	padding: 6px 12px;
 	font-size: 11px;
 }
-.btn.large {
+.button.large {
 	padding: 7px 26px;
 	font-size: 18px;
 	line-height: 36px;
 }
 /*@end sizes */
 /*@group primary*/
-.btn.primary {
-	@include gradient($btn_primary_start, $btn_primary_stop);
-	border: 1px solid rgba(#000,0.3);
-	color: $btn_primary_color;
-	&:hover {
-		@include gradient($btn_primary_hover_start, $btn_primary_hover_stop);
-		color: $btn_primary_hover_color;
-		box-shadow: inset 0 1px 3px rgba(#000,0.2);
-	}
-	&:active {
-		box-shadow: inset 0 4px 5px rgba(#000,0.3);
-	}
-}
+@import "buttons/primary.scss";
 /*@end primary*/
 /*@group primary + 3D*/
-.btn.primary.threeD {
+.button.primary.threeD {
 	background: $btn_primary_start;
 	box-shadow: 0 4px 1px darken($btn_primary_start,52%), 0px 8px 8px rgba(#000,0.4);
 	&:hover {
