--- a/scss/forms/basic.scss
+++ b/scss/forms/basic.scss
@@ -5,6 +5,9 @@ i {
 form {
 	margin-bottom: $line-height;
 }
+form * {
+	margin: 0;
+}
 label,
 .label-group {
 	display: block;
@@ -120,6 +123,7 @@ label .message {
 }
 .submit-wrapper .button {
 	float: right;
+	line-height: normal;
 }
 .submit-wrapper .button.primary {
 	margin-left: 10px;
