--- a/scss/forms/dimensions.scss
+++ b/scss/forms/dimensions.scss
@@ -1,39 +1,39 @@
 /*@group dimensions*/
 /*@group specific*/
-label .span1 {
+label .size1 {
 	width: $form-base-width;
 }
-label .span2 {
+label .size2 {
 	width: $form-base-width*2;
 }
-label .span3 {
+label .size3 {
 	width: $form-base-width*3;
 }
-label .span4 {
+label .size4 {
 	width: $form-base-width*4;
 }
-label .span5 {
+label .size5 {
 	width: $form-base-width*5;
 }
-label .span6 {
+label .size6 {
 	width: $form-base-width*6;
 }
-label .span7 {
+label .size7 {
 	width: $form-base-width*7;
 }
-label .span8 {
+label .size8 {
 	width: $form-base-width*8;
 }
-label .span9 {
+label .size9 {
 	width: $form-base-width*9;
 }
-label .span10 {
+label .size10 {
 	width: $form-base-width*10;
 }
-label .span11 {
+label .size11 {
 	width: $form-base-width*11;
 }
-label .span12 {
+label .size12 {
 	width: $form-base-width*12;
 }
 /*@end specific*/
