--- a/css/forms.css
+++ b/css/forms.css
@@ -442,6 +442,25 @@ legend {
   font-weight: bold;
 }
 
+.required:before,
+.form-horizontal .required div:after {
+  content: '*';
+  font-size: 20px;
+}
+
+.required:before {
+  float: left;
+  margin-right: 2px;
+}
+
+.form-horizontal .required:before {
+  display: none;
+}
+
+.form-horizontal .required div:after {
+  margin-left: 2px;
+}
+
 /*@group buttons*/
 .button {
   display: inline-block;
