--- a/scss/forms/pend.scss
+++ b/scss/forms/pend.scss
@@ -6,11 +6,14 @@
 	border: 1px solid #cccccc;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
 	vertical-align: top;
-	height: 18px;
+	height: 28px;
 	padding: 4px 8px;
 	margin: 3px 0;
 	vertical-align: middle;
-	line-height: 20px;
+	line-height: 19px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 .prepend {
 	border-right: none;
