--- a/css/forms.css
+++ b/css/forms.css
@@ -144,6 +144,7 @@ label .message {
   color: #999999;
   font-size: 12px;
   vertical-align: middle;
+  margin-left: 3px;
 }
 
 .help-inline label input {
